--- a/blogpost.html
+++ b/blogpost.html
@@ -1,13 +1,13 @@
 <html>
     <head>
-        <title>Tu blog en Github</title>
+        <title>Bienvenidos a Hyperblog 2.0</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog en Github</span>
+                <span id="tagline">Tu blog de maestro</span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
